initial commit for readme

--- a/readme
+++ b/readme
@@ -1,1 +1,2 @@
 # this is the readme file.
+# I have alredy created a sample html file for the frontend code and we would take this code and host it over the serverless arch.
